--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ allprojects {
         ashleyVersion = '1.7.3'
         aiVersion = '1.8.2'
         gdxControllersVersion = '2.1.0'
+        jsonSimpleVersion = '1.1'
     }
 
     repositories {
@@ -51,7 +52,7 @@ project(":desktop") {
         api "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
         api "com.badlogicgames.gdx-controllers:gdx-controllers-desktop:$gdxControllersVersion"
-        
+        api "com.googlecode.json-simple:json-simple:$jsonSimpleVersion"
     }
 }
 
@@ -68,6 +69,6 @@ project(":core") {
         api "com.badlogicgames.gdx:gdx-ai:$aiVersion"
         api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
         api "com.badlogicgames.gdx-controllers:gdx-controllers-core:$gdxControllersVersion"
-        
+        api "com.googlecode.json-simple:json-simple:$jsonSimpleVersion"
     }
 }
